<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_admin_view">

    <ImageView
        android:id="@+id/ivAdminViewLogo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/imagen"
        />
    <TextView
        android:id="@+id/tvTextWelcomeAdmin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_enter"
        android:gravity="center_horizontal"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAdminViewLogo"
        />
    <TextView
        android:id="@+id/tvTextUserAdminView"
        android:layout_margin="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_enter"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextWelcomeAdmin"
        />

    <TextView
        android:id="@+id/tvAdminViewName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_margin="12dp"
        android:text="Nombre Aministrador: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextUserAdminView"
        />

    <TextView
        android:id="@+id/tvAdminViewMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:layout_margin="12dp"
        android:text="Correo: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdminViewName"
        />

    <Button
        android:id="@+id/btnAdminMaterias"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_materia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdminViewMail"
        />
    <Button
        android:id="@+id/buttonAdminVerU"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_usuario"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btnAdminGrupos"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_Grupos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAdminViewMail"
        />

    <Button
        android:id="@+id/btnAdminAulas"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_Aulas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAdminGrupos"
        />

    <Button
        android:id="@+id/btnAdminAlumnos"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_alumnos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAdminMaterias"
        />

    <Button
        android:id="@+id/btnAdminDocentes"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_Docentes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAdminAlumnos"
        />
    <Button
        android:id="@+id/btnAdminUsuarios"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="Solicitudes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAdminAulas"
        />

    <Button
        android:id="@+id/btnAdminViewCloseSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>