<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_teachers_view">

    <ImageView
        android:id="@+id/ivTeachLogo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/imagen"
        />

    <TextView
        android:id="@+id/tvTextWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_enter"
        android:gravity="center_horizontal"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTeachLogo"
        />
    <TextView
        android:id="@+id/tvTextUser"
        android:layout_margin="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_enter"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextWelcome"
        />

    <Button
        android:id="@+id/btnTeacherCalif"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_calif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextDoc3"

        />

    <Button
        android:id="@+id/btnTeacherRubros"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_rubros"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextDoc3"
        />
    <Button
        android:id="@+id/btnTeachersStudents"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_alumnos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTeacherRubros"
        />


    <TextView
        android:id="@+id/tvTextDoc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvText_doc"
        android:layout_marginTop="25dp"
        android:layout_margin="12dp"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextUser"
        />

    <TextView
        android:id="@+id/tvTextDoc1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Correo:"
        android:layout_marginTop="25dp"
        android:layout_margin="12dp"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextDoc"
        />

    <TextView
        android:id="@+id/tvTextDoc2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tvText_doc2"
        android:layout_marginTop="25dp"
        android:gravity="left"
        android:layout_margin="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTextDoc1"
        />

    <TextView
        android:id="@+id/tvTextDoc3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Usted tiene asignado el grupo de: Primero A con un total de alumnos de: 25, asignado en el aula: Primer Aula"
        android:layout_marginTop="25dp"
        android:gravity="left"
        app:layout_constraintStart_toStartOf="@id/btnTeacherCloseSesion"
        app:layout_constraintEnd_toEndOf="@id/btnTeacherCloseSesion"
        app:layout_constraintTop_toBottomOf="@id/tvTextDoc2"
        />

    <Button
        android:id="@+id/btnTeacherCloseSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_sesion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>