<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_solicitar_registro">

    <ImageView
        android:id="@+id/ivSolicitarRegLogo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/imagen"
        />

    <TextView
        android:id="@+id/tvTextUserSolicitar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_enter"
        android:layout_margin="12dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSolicitarRegLogo"
        />

    <EditText
        android:id="@+id/etUserRegistroName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTextUserSolicitar"
        android:hint="@string/hint_usuarioAdd"
        android:drawableStart="@drawable/vector_adduser"
        />

    <EditText
        android:id="@+id/etUsermail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserRegistroName"
        android:hint="@string/hint_usuarioMail"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/vector_mail"
        />

    <EditText
        android:id="@+id/etUserPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawablePadding="12dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsermail"
        android:drawableStart="@drawable/vector_lock1"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="160dp"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/buttonRegistroRegresar"
        app:layout_constraintTop_toBottomOf="@id/etUserPassword"

        />

    <TextView
        android:id="@+id/tvTexTypetUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Tipo de usuario:"
        android:layout_margin="12dp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUserPassword"
        />

    <Button
        android:id="@+id/buttonRegistroRegresar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btnUserSolicitud"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_Agregar"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>