<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_create_teachers">

    <ImageView
        android:id="@+id/ivCreateTeacherLogo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/imagen"
        />

    <TextView
        android:id="@+id/tvTextUserCreateTeacher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/user_enter"
        android:layout_margin="12dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCreateTeacherLogo"
        />

    <TextView
        android:id="@+id/tvTrimestre"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginTop="12dp"
        android:text="Usuario: "
        app:layout_constraintStart_toStartOf="@id/btnCreateTeacherRegresar"
        app:layout_constraintTop_toBottomOf="@id/tvTextUserCreateTeacher"
        />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="160dp"
        android:layout_marginTop="12dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/btnCreateTeacherRegresar"
        app:layout_constraintTop_toBottomOf="@id/tvTextUserCreateTeacher"

        />

    <EditText
        android:id="@+id/etSpeciallity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTrimestre"
        android:hint="@string/hint_especialidad"
        android:drawableStart="@drawable/vector_additional"
        />

    <EditText
        android:id="@+id/etStudies"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:drawablePadding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSpeciallity"
        android:hint="@string/hint_estudios"
        android:drawableStart="@drawable/vector_studies"
        />

    <Button
        android:id="@+id/btnCreateTeacherRegresar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/btn_regresar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btnCreateTeacher"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_AgregarDocAl"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="12dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>